# pidgeiot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  init-db.sql
capsules/: Cargo.toml
capsules/src/: connection_state.rs  lib.rs
docs/: api.md
docs/design/: alerts-triggers.md  rule-engine.md  tenancy-isolation.md
docs/infra/: postgres-consolidation.md  production-ha-plan.md  second-node-hosting.md
dovecote/: .gitignore  Cargo.toml  README.md  package.json  private_key.der  wrangler.toml
dovecote/.cargo/: config.toml
dovecote/src/: lib.rs  queue.rs  scheduled.rs
dovecote/src/helpers/: access.rs  alerts.rs  auth.rs  durable_object.rs  firmware.rs  flocks.rs  greptime.rs  hyperdrive.rs  mod.rs  pigeons.rs  telemetry.rs
dovecote/src/objects/: helpers.rs  mod.rs  pigeons.rs  ws.rs
fancier/: .env.dev  .env.release  .env.staging  .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  package.json  wrangler.staging.toml  wrangler.toml
fancier/.cargo/: config.toml
fancier/assets/: architecture.mmd  tailwind.css
fancier/public/: robots.txt  sitemap.xml
fancier/public/assets/: theme-init.js
fancier/scripts/: build-release.sh
fancier/src/: config.rs  lib.rs  local_storage.rs  main.rs
fancier/src/api/: alerts.rs  firmware.rs  flocks.rs  helpers.rs  mod.rs  pigeons.rs  telemetry.rs
fancier/src/components/: alert.rs  alerts_panel.rs  board_select.rs  connection_badge.rs  connector_badge.rs  firmware_modal.rs  footer.rs  graph_widget.rs  json_view.rs  log_viewer.rs  maturity_badge.rs  mod.rs  navbar.rs  ory_error.rs  ory_form_builder.rs  session_cookie.rs  telemetry_chart.rs  telemetry_endpoint_modal.rs  theme_controller.rs  track_widget.rs
fancier/src/helpers/: browser.rs  connection_state.rs  crypto.rs  download.rs  gps_track.rs  json.rs  mod.rs  ory_error.rs  ory_ui.rs  session_cookie.rs
fancier/src/models/: alert_variant.rs  auth_state.rs  mod.rs
fancier/src/partials/: code_showcase.rs  connectivity.rs  cta.rs  features.rs  home.rs  infrastructure.rs
fancier/src/views/: about.rs  api_reference.rs  architecture.rs  dashboard.rs  documentation.rs  error.rs  features.rs  flocks.rs  login.rs  mod.rs  pigeon.rs  pigeons.rs  pricing.rs  recovery.rs  register.rs  session.rs  settings.rs  verification.rs  wrapper.rs
fancier/worker/: access-gate.mjs
infra/: docker-compose.yml  init-greptime.sh  proxmox-greptimedb-lxc.sh
schemas/kratos/: identity.user.schema.json  kratos.yml
schemas/kratos/courier-templates/v1/recovery/invalid/: email.body.plaintext.gotmpl
schemas/kratos/courier-templates/v1/recovery/valid/: email.body.gotmpl  email.body.plaintext.gotmpl  email.subject.gotmpl
schemas/kratos/courier-templates/v1/recovery_code/invalid/: email.body.gotmpl  email.subject.gotmpl
schemas/kratos/courier-templates/v1/recovery_code/valid/: email.body.gotmpl  email.body.plaintext.gotmpl  email.subject.gotmpl
schemas/kratos/courier-templates/v1/verification/invalid/: email.body.plaintext.gotmpl
schemas/kratos/courier-templates/v1/verification/valid/: email.body.gotmpl  email.body.plaintext.gotmpl  email.subject.gotmpl
schemas/kratos/courier-templates/v1/verification_code/invalid/: email.body.gotmpl
schemas/kratos/courier-templates/v1/verification_code/valid/: email.body.gotmpl  email.body.plaintext.gotmpl  email.subject.gotmpl
