[workspace]
members = ["dovecote", "fancier", "capsules"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v7", "js", "zerocopy"] }
time = { version = "0.3", features = [
  "serde",
  "formatting",
  "parsing",
  "wasm-bindgen",
] }
serde-wasm-bindgen = "0.6"
capsules = { path = "capsules" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
