[package]
name = "dovecote"
version = "0.1.0"
authors = ["justin <code@jes.contact>"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
capsules.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
uuid.workspace = true
time.workspace = true

ory-kratos-client-wasm = { git = "https://github.com/justins-engineering/kratos-client-rust.git", default-features = false, features = [
  "worker",
] }
worker = { version = "0.8", features = ["tokio-postgres"] }
futures = "0.3"
tokio-postgres = { version = "0.7", features = [
  "js",
  "with-uuid-1",
  "with-time-0_3",
], default-features = false }
once_cell = "1.19"
jwt-simple = "0.12"
ed25519-dalek = { version = "2", default-features = false, features = [
  "alloc",
  "pkcs8",
] }
base64 = "0.22"
