[package]
name = "dovecote"
version = "0.1.0"
authors = ["justin <code@jes.contact>"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
capsules.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
uuid.workspace = true
time.workspace = true

ory-kratos-client-wasm = { version = "0.2", default-features = false, features = [
  "worker",
] }
worker = { version = "0.8", features = ["tokio-postgres", "queue"] }
futures = "0.3"
tokio-postgres = { version = "0.7", features = [
  "js",
  "with-uuid-1",
  "with-time-0_3",
], default-features = false }
ed25519-dalek = { version = "2", default-features = false, features = [
  "alloc",
] }
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22"
sha2 = "0.10"

# For Cloudflare Access JWT (RS256) verification via WebCrypto — `worker`
# already depends on all four transitively at these same versions, but
# doesn't enable the web-sys Crypto/SubtleCrypto/CryptoKey features we
# need, so we depend on web-sys directly to add them (Cargo unions
# features across a single resolved instance rather than duplicating the
# crate) and depend on the other three just so we can name them in `use`.
web-sys = { version = "0.3.102", features = [
  "Crypto",
  "SubtleCrypto",
  "CryptoKey",
] }
js-sys = "0.3.102"
wasm-bindgen = "0.2.125"
wasm-bindgen-futures = "0.4.75"
